// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createIdList from KdB alt data should match the expected result 1`] = `
Array [
  "GC22201",
  "GC41103",
  "GC41203",
  "GC51701",
  "GC51901",
  "GC52701",
  "GC53401",
  "GC55401",
]
`;

exports[`createIdList from TWINS data should match the expected result 1`] = `
Array [
  "GC51701",
  "GC51901",
  "GC52701",
  "GC53401",
  "GC55401",
]
`;

exports[`parseCSV should match the expected result 1`] = `
"BEGIN:VCALENDAR
PRODID:-//gam0022//TwinC 1.0//EN
VERSION:2.0
CALSCALE:GREGORIAN
METHOD:PUBLISH
X-WR-CALNAME:授業時間割
X-WR-TIMEZONE:Asia/Tokyo
X-WR-CALDESC:授業時間割
BEGIN:VTIMEZONE
TZID:Asia/Tokyo
X-LIC-LOCATION:Asia/Tokyo
BEGIN:STANDARD
TZOFFSETFROM:+0900
TZOFFSETTO:+0900
TZNAME:JST
DTSTART:19700102T000000
END:STANDARD
END:VTIMEZONE
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261006T084000
DTEND;TZID=Asia/Tokyo:20261006T095500
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=TU
EXDATE:20261012T084000,20261015T084000,20261030T084000,20261102T084000,20261103T084000,20261111T084000,20261123T084000,20261124T084000,20261125T084000,20261126T084000,20261127T084000,20261223T084000,20261224T084000,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:GE62401, GE72701と同一。 英語で授業。 G科目. 対面(オンライン併用型) 情報メディア創成学類生はGC55301を、知識情報システム主専攻生はGE72701を、それ以外の学生はGE62401を履修すること。
LAST-MODIFIED:20260413T000000
LOCATION:7A103
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Machine Learning and Information Retrieval
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261006T101000
DTEND;TZID=Asia/Tokyo:20261006T112500
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=TU
EXDATE:20261012T101000,20261015T101000,20261030T101000,20261102T101000,20261103T101000,20261111T101000,20261123T101000,20261124T101000,20261125T101000,20261126T101000,20261127T101000,20261223T101000,20261224T101000,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:GE62401, GE72701と同一。 英語で授業。 G科目. 対面(オンライン併用型) 情報メディア創成学類生はGC55301を、知識情報システム主専攻生はGE72701を、それ以外の学生はGE62401を履修すること。
LAST-MODIFIED:20260413T000000
LOCATION:7A103
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Machine Learning and Information Retrieval
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261006T151500
DTEND;TZID=Asia/Tokyo:20261006T163000
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=TU
EXDATE:20261012T151500,20261015T151500,20261030T151500,20261102T151500,20261103T151500,20261111T151500,20261123T151500,20261124T151500,20261125T151500,20261126T151500,20261127T151500,20261223T151500,20261224T151500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:対面
LAST-MODIFIED:20260413T000000
LOCATION:7A105
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:システム運用・管理
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261007T084000
DTEND;TZID=Asia/Tokyo:20261007T095500
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=WE
EXDATE:20261012T084000,20261015T084000,20261030T084000,20261102T084000,20261103T084000,20261111T084000,20261123T084000,20261124T084000,20261125T084000,20261126T084000,20261127T084000,20261223T084000,20261224T084000,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:「情報通信概論」(2018年度以前入学者対象)、もしくは「コンピュータネットワーク」(2019年度以降入学者対象)を履修していることが望ましい。 対面
LAST-MODIFIED:20260413T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:通信ネットワーク
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261124T084000
DTEND;TZID=Asia/Tokyo:20261124T095500
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:「情報通信概論」(2018年度以前入学者対象)、もしくは「コンピュータネットワーク」(2019年度以降入学者対象)を履修していることが望ましい。 対面
LAST-MODIFIED:20260413T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:通信ネットワーク
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261007T101000
DTEND;TZID=Asia/Tokyo:20261007T112500
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=WE
EXDATE:20261012T101000,20261015T101000,20261030T101000,20261102T101000,20261103T101000,20261111T101000,20261123T101000,20261124T101000,20261125T101000,20261126T101000,20261127T101000,20261223T101000,20261224T101000,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:「情報通信概論」(2018年度以前入学者対象)、もしくは「コンピュータネットワーク」(2019年度以降入学者対象)を履修していることが望ましい。 対面
LAST-MODIFIED:20260413T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:通信ネットワーク
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261124T101000
DTEND;TZID=Asia/Tokyo:20261124T112500
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:「情報通信概論」(2018年度以前入学者対象)、もしくは「コンピュータネットワーク」(2019年度以降入学者対象)を履修していることが望ましい。 対面
LAST-MODIFIED:20260413T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:通信ネットワーク
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261007T121500
DTEND;TZID=Asia/Tokyo:20261007T133000
RRULE:FREQ=WEEKLY;UNTIL=20270215T130000Z;BYDAY=WE
EXDATE:20261012T121500,20261015T121500,20261030T121500,20261102T121500,20261103T121500,20261111T121500,20261123T121500,20261124T121500,20261125T121500,20261126T121500,20261127T121500,20261223T121500,20261224T121500,20270111T121500,20270113T121500,20270115T121500,20270118T121500,20270211T121500,20270216T121500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20260413T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261124T121500
DTEND;TZID=Asia/Tokyo:20261124T133000
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20260413T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261007T134500
DTEND;TZID=Asia/Tokyo:20261007T150000
RRULE:FREQ=WEEKLY;UNTIL=20270215T130000Z;BYDAY=WE
EXDATE:20261012T134500,20261015T134500,20261030T134500,20261102T134500,20261103T134500,20261111T134500,20261123T134500,20261124T134500,20261125T134500,20261126T134500,20261127T134500,20261223T134500,20261224T134500,20270111T134500,20270113T134500,20270115T134500,20270118T134500,20270211T134500,20270216T134500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20260413T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261124T134500
DTEND;TZID=Asia/Tokyo:20261124T150000
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20260413T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261002T151500
DTEND;TZID=Asia/Tokyo:20261002T163000
RRULE:FREQ=WEEKLY;UNTIL=20270215T130000Z;BYDAY=FR
EXDATE:20261012T151500,20261015T151500,20261030T151500,20261102T151500,20261103T151500,20261111T151500,20261123T151500,20261124T151500,20261125T151500,20261126T151500,20261127T151500,20261223T151500,20261224T151500,20270111T151500,20270113T151500,20270115T151500,20270118T151500,20270211T151500,20270216T151500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20260413T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261002T164500
DTEND;TZID=Asia/Tokyo:20261002T180000
RRULE:FREQ=WEEKLY;UNTIL=20270215T130000Z;BYDAY=FR
EXDATE:20261012T164500,20261015T164500,20261030T164500,20261102T164500,20261103T164500,20261111T164500,20261123T164500,20261124T164500,20261125T164500,20261126T164500,20261127T164500,20261223T164500,20261224T164500,20270111T164500,20270113T164500,20270115T164500,20270118T164500,20270211T164500,20270216T164500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:同一テーマが複数学期で開講されていても、2度以上選択することはできない。 対面(オンライン併用型)
LAST-MODIFIED:20260413T000000
LOCATION:7B106,7C202,クリエイティブメディアラボ
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:情報メディア実験B
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261001T121500
DTEND;TZID=Asia/Tokyo:20261001T133000
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=TH
EXDATE:20261012T121500,20261015T121500,20261030T121500,20261102T121500,20261103T121500,20261111T121500,20261123T121500,20261124T121500,20261125T121500,20261126T121500,20261127T121500,20261223T121500,20261224T121500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:GE70301と同一。 実務経験教員. 対面 情報メディア創成学類生はGC53401を,それ以外の学生はGE70301を履修すること
LAST-MODIFIED:20260413T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:ディジタルドキュメント
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261001T134500
DTEND;TZID=Asia/Tokyo:20261001T150000
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=TH
EXDATE:20261012T134500,20261015T134500,20261030T134500,20261102T134500,20261103T134500,20261111T134500,20261123T134500,20261124T134500,20261125T134500,20261126T134500,20261127T134500,20261223T134500,20261224T134500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:GE70301と同一。 実務経験教員. 対面 情報メディア創成学類生はGC53401を,それ以外の学生はGE70301を履修すること
LAST-MODIFIED:20260413T000000
LOCATION:ユニオン講義室
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:ディジタルドキュメント
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261002T121500
DTEND;TZID=Asia/Tokyo:20261002T133000
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=FR
EXDATE:20261012T121500,20261015T121500,20261030T121500,20261102T121500,20261103T121500,20261111T121500,20261123T121500,20261124T121500,20261125T121500,20261126T121500,20261127T121500,20261223T121500,20261224T121500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:GE62501, GE73101と同一。 英語で授業。 G科目. 対面 情報メディア創成学類生はGC55201を、知識情報システム主専攻生はGE73101を、それ以外の学生はGE62501を履修すること。 GE60701「レファレンスサイエンス」を修得済みの者は履修不可
LAST-MODIFIED:20260413T000000
LOCATION:7A210
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Human Information Interaction
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;TZID=Asia/Tokyo:20261002T134500
DTEND;TZID=Asia/Tokyo:20261002T150000
RRULE:FREQ=WEEKLY;UNTIL=20261222T130000Z;BYDAY=FR
EXDATE:20261012T134500,20261015T134500,20261030T134500,20261102T134500,20261103T134500,20261111T134500,20261123T134500,20261124T134500,20261125T134500,20261126T134500,20261127T134500,20261223T134500,20261224T134500,
DTSTAMP:20260413T000000
CREATED:20260413T000000
DESCRIPTION:GE62501, GE73101と同一。 英語で授業。 G科目. 対面 情報メディア創成学類生はGC55201を、知識情報システム主専攻生はGE73101を、それ以外の学生はGE62501を履修すること。 GE60701「レファレンスサイエンス」を修得済みの者は履修不可
LAST-MODIFIED:20260413T000000
LOCATION:7A210
SEQUENCE:0
STATUS:CONFIRMED
SUMMARY:Human Information Interaction
TRANSP:OPAQUE
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20260409
DTEND;VALUE=DATE:20260410
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春A事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20260427
DTEND;VALUE=DATE:20260428
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春A履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20260513
DTEND;VALUE=DATE:20260514
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春B事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20260601
DTEND;VALUE=DATE:20260602
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春B履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20260623
DTEND;VALUE=DATE:20260624
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春C事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20260708
DTEND;VALUE=DATE:20260709
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:春C履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20260916
DTEND;VALUE=DATE:20260917
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋A事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20261014
DTEND;VALUE=DATE:20261015
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋A履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20261104
DTEND;VALUE=DATE:20261105
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋B事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20261118
DTEND;VALUE=DATE:20261119
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋B履修登録締切日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20261216
DTEND;VALUE=DATE:20261217
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋C事前登録締め切り日
END:VEVENT
BEGIN:VEVENT
DTSTART;VALUE=DATE:20270115
DTEND;VALUE=DATE:20270116
DTSTAMP:20260413T000000
CREATED:20260413T000000
STATUS:CONFIRMED
TRANSP:TRANSPARENT
SUMMARY:秋C履修登録締切日
END:VEVENT
END:VCALENDAR"
`;
